syntax = "proto3";

package account;

import "agency.proto";
import "diver.proto";

import "google/protobuf/empty.proto";

option go_package = "./pb";

service Account {
    rpc Create(AccountRequest) returns (google.protobuf.Empty);
}

message AccountRequest {
    oneof kind {
        diver.Diver diver = 1;
        agency.Agency agency = 5;
    }
    string email = 10;
    string username = 11;
    string password = 12;
}
